--- a/3DModel_viewer.html
+++ b/3DModel_viewer.html
@@ -58,11 +58,10 @@
 
       function loadSTLModel() {
         const loader = new STLLoader();
-        loader.load( 'https://threejs.org/examples/models/stl/binary/pr2_head_tilt.stl', function ( geometry ) {
+        loader.load( 'https://raw.githubusercontent.com/nophead/Mendel90/master/dibond_E3D/stls/dust_filter.stl', function ( geometry ) {
           const material = new THREE.MeshPhongMaterial( { color: 0xff5533, specular: 0x111111, shininess: 200 } );
           const mesh = new THREE.Mesh( geometry, material );
           mesh.position.set( 0, 0, 0 );
-          mesh.scale.set( 10, 10, 10 );
           mesh.castShadow = true;
           mesh.receiveShadow = true;
           scene.add( mesh );
