--- a/3DModel_viewer.html
+++ b/3DModel_viewer.html
@@ -130,7 +130,7 @@
         // Camera Control
         const controls = new OrbitControls( camera, renderer.domElement );
         controls.addEventListener( 'change', render );
-        controls.target.set( 0, 0, 0 );
+        controls.target.set( 0, 0, modelSize.z/2 );
         controls.update();
       }
 
